--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>P2P File Transfer</title>
-        <link rel="stylesheet" href="style.css">
+        <!--<link rel="stylesheet" href="style.css">-->
     </head>
     <body>
         <div class="h1">
@@ -12,10 +12,13 @@
         </div>
         <div class="input">
             <input id="peerId" placeholder="Enter Peer ID to connect to a device."/>
+            <input type="file" id="fileInput" />
             <button onclick="sendFile()">Send File</button>
-            <script src="script.js"></script>
+            
         </div>
 
+        <script src="script.js"></script>
+
     </body>
-    
+
 </html>
